Bug 1319638 - Part 2: Change line number of a function created by Function constructor to start from 1. r=shu